<resources>
    <string name="app_name">MotorBro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="facebook_app_id">238165707334677</string>
    <string name="fb_login_protocol_scheme">fb238165707334677</string>
    <string name="privacyPolicy1">
        MotorBro Privacy Policy
    </string>
    <string name="privacyPolicy11">
        10. ABOUT US.
    </string>
    <string name="privacyPolicy11Desc">
<br />Your access to the App, as well as this Privacy Policy are governed and interpreted by the laws of the State of New York, other than such laws, rules, regulations and case law that would result in the application of the laws of a jurisdiction other than the State of New York. By using the App, you are consenting to the exclusive jurisdiction of the courts of the United States and the State of New York. You agree that such courts shall have in personam jurisdiction and venue and waive any objection based on inconvenient forum. You agree that you will not file or participate in a class action against us. In the event there is a discrepancy between this English language version and any translated copies of the Policy, the English version shall prevail.
<br />Effective date
<br />This Privacy Policy was last updated on 16 December 2019.
<br /><br />
    </string>
    <string name="termsServicesDescription">
        DateFilipina provides a service for single adults to meet each other online, it\'s operated by Elevin Tech. By using the DateFilipina application, (the "App") you agree to be bound by these Terms of Use (this "Agreement"), whether or not you register as a member of DateFilipina ("Member"). If you wish to become a Member and make use of the DateFilipina service (the "Service"), please read these Terms and Conditions. If you object to anything in this Agreement, do not use the App or the Service.
    </string>
    <string name="termsServices2">
        User information
    </string>
    <string name="termsServices2Desc">
        You represent, warrant, and undertake that the information and photos that you supply to the App is/are accurate in all respects.
Apart from the above, you must not upload on our website images that contain:
	*
graphic in nature;
	*
depiction of underage;
	*
low quality;
	*
inappropriate(nude, sexual, violence).
    </string>
    <string name="termsServices3">
        Own risk
    </string>
    <string name="termsServices3Desc">
        You accept that your use of the App and it\'s Service is solely at your own risk.
    </string>
    <string name="termsServices4">
        Certain Contents that are not allowed on DateFilipina
    </string>
    <string name="termsServices4Desc">
        contains language or imagery which could be deemed offensive or is likely to harass, upset, embarrass, alarm or annoy any other person;
	*
is obscene, pornographic, violent or otherwise may offend human dignity;
	*
is abusive, insulting or threatening, discriminatory or which promotes or encourages racism, sexism, hatred or bigotry;
	*
encourages any illegal activity including, without limitation, terrorism, inciting racial hatred or the submission of which in itself constitutes committing a criminal offence;
	*
is defamatory or libellous;
	*
relates to commercial activities (including, without limitation, sales, competitions and advertising, links to other websites or premium line telephone numbers);
	*
involves the transmission of "junk" mail or "spam";
	*
contains any spy ware, adware, viruses, corrupt files, worm programmes or other malicious code designed to interrupt, damage or limit the functionality of or disrupt any software, hardware, telecommunications, networks, servers or other equipment, Trojan horse or any other material designed to damage, interfere with, wrongly intercept or expropriate any data or personal information whether from DateFilipina or otherwise;
	*
itself, or the posting of which, infringes any third party\'s rights (including, without limitation, intellectual property rights and privacy rights);
	*
shows another person which was created or distributed without that person’s consent.


DateFilipina operates a zero-tolerance policy for this kind of content.
    </string>
    <string name="termsServices5">
        Content Of Profile
    </string>
    <string name="termsServices5Desc">
        1.
You are solely responsible for the content of your profile, messages, video and audio recordings and other materials you may upload to the Service or transmit to other members of the Service.
	2.
You agree that you will not upload to your profile or onto the Website any content which is abusive, obscene, profane, offensive, sexually oriented, threatening, harassing, racially offensive, improper or otherwise inappropriate as determined at our sole discretion or has graphics, a photo of underage, celebrities.

    </string>
    <string name="termsServices6">
        Interaction with members
    </string>
    <string name="termsServices6Desc">
        You are solely responsible for your interaction with other members of the Service and the App.

    </string>
    <string name="termsServices7">
        Information not confidential
    </string>
    <string name="termsServices7Desc">
        You agree that any material or information provided by you, save and except for any Personal Information (which may include your full name, postal address, telephone number etc.), the use of which is governed by our Privacy Policy, will be treated as non-confidential and non-proprietary and we may use such material or information without restriction. You acknowledge that any such material or information provided by you will be available for other members or users of the Website to read.Risks
You acknowledge that there are risks involved in online dating, including but not limited to:
	1.
unknowingly dealing with underage persons
	2.
persons acting under a false profile or information
	3.
for a criminal purpose or fraudulent acts including without limitation, scamming or spamming.


You agree to take all necessary precautions when communicating with or meeting with other users, especially if you decide to meet in person. In addition, you agree to review our online dating safety reminders prior to using the service.Identity of the member
You acknowledge that the App cannot and does not warranty that each member or user of the Service or the App is who he or she claims to be, in view of the fact that user authentication is extremely difficult on the internet. The App does not warrant that member profiles are reliable, accurate or complete. Consequently, you must be careful in dealing with other members or users of the App.
Account Terminated by us
We may immediately terminate your account and your access to the Service at any time if we determine (in our absolute discretion) that you have breached this Agreement. Notice of termination will be delivered to the last email address you provide to us.

    </string>
    <string name="termsServices8">
        Monitor Information
    </string>
    <string name="termsServices8Desc">
        The App reserve the right to monitor all profiles, messages, chat, and instant messages to ensure that they conform to the requirements of these Terms of Use.

    </string>
    <string name="termsServices9">
        Information Security
    </string>
    <string name="termsServices9Desc">
        Transmission of data over the internet cannot be guaranteed as being totally secured. We do not warrant and cannot ensure the security of any information you provide to us while we make great efforts protecting your information. Accordingly, any information which you provide to us is solely at your own risk. Nevertheless, once we receive your information, we will take reasonable steps to preserve the security of such information.
    </string>
    <string name="termsServices10">
        Information Security
    </string>
    <string name="termsServices10Desc">
        Transmission of data over the internet cannot be guaranteed as being totally secured. We do not warrant and cannot ensure the security of any information you provide to us while we make great efforts protecting your information. Accordingly, any information which you provide to us is solely at your own risk. Nevertheless, once we receive your information, we will take reasonable steps to preserve the security of such information.
Indemnification and Warranty
Under no circumstances, including but not limited to, negligence, shall Elevin Tech  or any of its related, affiliated companies be liable for any direct, indirect, incidental, special, consequential or punitive damages that result from the use of, or the inability to use the Service. Subscriber specifically acknowledges and agrees that Elevin Tech  is not liable for any defamatory, offensive or illegal conduct of any user, or for any failure of error, omission, interruption, deletion, defect, delay in operation or transmission, communications line failure, theft or destruction or unauthorized access to, alteration of or use of records, whether under contract or tort theory, or under any other cause of action, for any amount over and above the amount paid by Subscriber to a Elevin Tech site.
Elevin Tech makes no warranties or representations as to the information, services or products provided through or in connection with the service. Subscriber\'s use of the service is at his/her own risk. Elevin Tech , nor any party involved in creating, producing, or delivering the server or content is liable for any direct incidental, consequential, indirect, or punitive damages arising from your access to, use of, or interpretation of, the service or products or services or information provided by or through the service. Without limiting the foregoing, Elevin Tech  makes no warranty of merchantability, fitness for any purpose, or non- results of the use of the content in terms of their correctness, accuracy, timeliness, reliability or otherwise.
Member agrees to indemnify and hold harmless Elevin Tech, their officers, directors, managers, members, agents and employees from any against any claims, losses, liabilities or expenses (including reasonable attorneys\' fees) arising out of Subscriber\'s breach of any term, condition or promise contained herein. Should any such claim for indemnification arise, or should any action be brought by Subscriber or Elevin Tech  relating to any services or products offered by or through the Service, Subscriber agrees to submit to the personal jurisdiction of the courts of The Philippines. Should any such claim for indemnification arise, or should any action be brought by subscriber or Elevin Tech  relating to any services or products offered by or through the Service Member agrees to submit to the personal jurisdiction of the courts of The Philippines.
This Agreement sets forth the full and complete understanding between Subscriber and Elevin Tech  with respect to its subject matter, and supersedes all prior understanding or agreements, whether written or verbal. This Agreement may be modified upon notice by Elevin Tech  to its Subscribers. Unless contrary to law or otherwise stated, each provision of this Agreement shall survive termination. This Agreement shall be governed by, and construed in accordance with, the laws of The Philippines for contracts entered into and wholly performed within that Country. The prevailing party in any suit to enforce the terms hereof shall be entitled to recover his/her/its reasonable attorneys\' fees.

    </string>
</resources>